Fix shelf overflow.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,9 +36,10 @@ a {
 .container {
   position: relative;
   max-width: 375px;
-  height: 100%;
+  min-height: 100%;
   background-color: $lite-yellow;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 header {
