--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -206,6 +206,7 @@
 #pantry {
   .stripe {
     position: absolute;
+    top: 0;
     left: 0;
     z-index: 0;
     width: 25px;
